add VehicleDescription - WIP

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -123,3 +123,8 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+.descriptions {
+  background: #f1f2f0;
+  padding: 20px 10px 30px;
+}
