add Modal - WIP

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $font-color-green-1: #189c6c;
 $font-color-grey-0: #899092;
 $font-color-grey-1: #444e53;
 $font-color-white: #eceeec;
+$font-color-blue: #819eb3;
 
 $background-color-grey-0: #e2e4e1;
 $background-color-grey-1: #f1f2f0;
