add vehicle description

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -148,6 +148,7 @@ body {
 
 .descriptions {
   background: $background-color-grey-1;
+  margin-top: 10px;
 
   &__info {
     padding: 14px 10px 0;
